--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -548,6 +548,7 @@
     <script src="~/js/contact-form-script.js"></script>
     <script src="~/js/custom-home-details-wishlist.js"></script>
     <script>
+        //所有頁面上不可有相同id
         var productIndexNew = $('#productIndexNew');
         var productIndexSale = $('#productIndexSale');
 
