--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <label>公告內文：</label>
+                    <label>評論內容：</label>
                     <div id="summernote-for-editor"></div>
                 </div>
                 <div class="d-flex mt-2 ">
