--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/ProductReview/ProductReview.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/ProductReview/ProductReview.cshtml
@@ -1,9 +1,13 @@
-﻿@{
+﻿@model prjCatChaOnlineShop.Models.ViewModels.CproductsReviews
+
+@{
     ViewData["Title"] = "ProductReview";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
 @section Styles{
+    <link href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* 原始圖片的視窗 */
         .image-popup {
@@ -54,36 +58,31 @@
 
     <div class=" mt-3 mb-3 d-flex justify-content-between">
 
-            <select class="form-select" id="payList">
-                <option value="" selected>全部訂單</option>
-                <option value="">零食</option>
-                <option value="">玩具</option>
-                <option value="">貓跳台</option>
-                <option value="">貓窩</option>
-                <option value="">情緒輔助</option>
-                <option value="">保健食品</option>
-                <option value="">貓飼料</option>
-                <option value="">貓砂</option>
-                <option value="">貓砂盆</option>
-            </select>
+        <select class="form-select" id="payList">
+            <option value="" selected>全部訂單</option>
+            @foreach (var catcoray in Model.productCategories)
+            {
+                <option value="@catcoray.ProductCategoryId">@catcoray.CategoryName</option>
+            }
+        </select>
 
 
-            <select class="form-select" id="deliveryList">
-                <option value="" selected>全部訂單</option>
-                <option value="">5顆星</option>
-                <option value="">4顆星</option>
-                <option value="">3顆星</option>
-                <option value="">2顆星</option>
-                <option value="">1顆星</option>
-            </select>
+        <select class="form-select" id="deliveryList">
+            <option value="" selected>全部訂單</option>
+            <option value="">5顆星</option>
+            <option value="">4顆星</option>
+            <option value="">3顆星</option>
+            <option value="">2顆星</option>
+            <option value="">1顆星</option>
+        </select>
 
 
 
-            <select class="form-select" id="statusList">
-                <option value="" selected>全部訂單</option>
-                <option value="">公開</option>
-                <option value="">隱藏</option>
-            </select>
+        <select class="form-select" id="statusList">
+            <option value="" selected>全部訂單</option>
+            <option value="">公開</option>
+            <option value="">隱藏</option>
+        </select>
 
 
         <button type="button" class="keyword_input col-xl-1">查詢</button>
@@ -99,83 +98,21 @@
                         <tr>
                             <!-- <th>序號</th> -->
                             <th>編號</th>
+                            <th>評論會員</th>
                             <th>產品類別</th>
                             <th>產品名稱</th>
                             <th>評分</th>
-                            <th>評論表ID</th>
-                            <th>評論會員</th>
-                            <th>發佈時間</th>
+                            <th>評論內容</th>
                             <th>狀態</th>
+                            <th>評論時間</th>
                             <th>編輯/刪除</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <!-- <td>1</td> -->
-                            <td>1</td>
-                            <td>貓咪用品</td>
-                            <td>好好用貓砂</td>
-                            <td>5 顆星</td>
-                            <td>001</td>
-                            <td>A小姐</td>
-                            <td>2023/08/16 17:58:29</td>
-                            <td>公開</td>
-                            <td>
-                                <button class="btn" data-bs-toggle="modal"
-                                        href="#exampleModalToggle2" role="button">
-                                    <i class="fas fa-edit"></i>
-                                </button>｜<button class="btn" onclick="userDelete()">
-                                    <a href="#" id="b5">
-                                        <i class="fas fa-trash-alt"></i>
-                                    </a>
-                                </button>
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
                 <!--表格-->
                 <!--編輯彈出視窗-->
-                <div class="modal fade" id="exampleModalToggle2" aria-hidden="true"
-                     aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalToggleLabel">編輯 Edit</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="tab-content" id="nav-tabContent">
-                                    <div class="tab-pane fade show active"
-                                         id="member-edit-nav-home">
-                                        <form>
-                                            <div class="form-group">
-                                                <label for="w3review">評論內容：</label>
-                                                <textarea class="form-control" id="w3review" name="w3review" rows="4" cols="50" readonly disabled>商品很棒！！值得購入~</textarea>
-                                            </div>
-
-                                            <div class="form-group">
-                                                <label for="w3review">狀態：</label>
-                                                <select name="" id="" class="form-select">
-                                                    <option value="">公開</option>
-                                                    <option value="">隱藏</option>
-                                                </select>
-                                            </div>
-
-                                            <button class="btn btn-danger btn-block mt-4"
-                                                    style="width: 100%;">
-                                                儲存
-                                            </button>
-                                        </form>
-                                    </div>
-                                    <div class="tab-pane fade" id="member-edit-nav-paper">
-                                        <p>顯示優惠券 | <button>刪除</button></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <!--編輯彈出視窗-->
             </div>
         </div>
@@ -183,8 +120,72 @@
 
 </div>
 
-@section Scripts{
+<!--編輯彈出視窗-->
+<div class="modal fade" id="exampleModal" aria-hidden="true"
+     aria-labelledby="exampleModalLabel" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalToggleLabel">編輯</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!--內容表單-->
+                <div class="d-flex align-items-center">
+                    <label class="col-form-label">編號：</label>
+                    <div class="d-inline-flex ">
+                        <span id="productReviewId" name="ProductReviewId" ></span>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center">
+                    <label class="col-form-label" for="memberName">會員名字：</label>
+                    <div class="d-inline-flex">
+                        <span id="memberName"  name="MemberName" ></span>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center">
+                        <label class="col-form-label">產品名稱：</label>
+                    <div class="d-inline-flex">
+                        <span id="productName"  name="ProductName" ></span>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center">
+                    <label class="col-form-label">顧客評分：</label>
+                    <div class="d-inline-flex">
+                        <span type="text" id="productRating"  name="ProductRating" ></span>
+                    </div>
+                </div>
+                <div class="col mt-2">
+                    <label for="reviewContent">評論內容：</label>
+                    <div class="d-inline-flex">
+                        <p id="reviewContent" name="ReviewContent">
+                    </p>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center">
+                    <label class="col-form-label" 　for="reviewTime">
+                        留言時間：
+                    </label>
+                    <span  id="reviewTime" name="ReviewTime" ></span>
+                </div>
+                <div class="d-flex mt-2 ">
+                    <label for="form-check-input">是否隱藏：</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="hideReview" name="HideReview">
+                    </div>
+                </div>
+                <button class="btn btn-danger btn-block w-100" id="submitButton-edior">儲存</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+
+@section Scripts{
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
     @* <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />*@
@@ -205,15 +206,83 @@
             "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "全部"]],
             "info": true,
             "ajax": {
-                url:"@Url.Action()",
-                type:"GET"
-            }
+                url: "@Url.Action("tableData" , "ProductReview" , new{ area="AdminCMS"})",
+                type: "GET"
+            },
+            "columns": [
+                { "data": "productReviewId" },
+                { "data": "memberName" },
+                { "data": "productcatgory" },
+                { "data": "productName" },
+                { "data": "productRating" },
+                { "data": "reviewContent" },
+                { "data": "hideReview" },
+                { "data": "reviewTime" },
+                {
+                    "data": "productReviewId",
+                    "render": function (data, type, row) {
+                        var deleteUrl = '@Url.Action("Delete", "ProductReview", new { area = "AdminCMS", id = "productReviewId" })';
+                        deleteUrl = deleteUrl.replace('productReviewId', row.productReviewId);
+                        return `<button class="edit-button" data-id="${row.productReviewId}" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-edit"></i></button> |
+                                                        <a href="${deleteUrl}" onclick="return confirm('確定要刪除嗎?')"><i class="fas fa-trash-alt"></i></a>`;
+                    }
+                }
+            ]
         })
+        $(document).on('click', '.edit-button', function () {
+            let id = $(this).data('id');
+            $.ajax({
+                url: '/AdminCMS/ProductReview/EditorReview?id=' + id,
+                type: 'GET',
+                success:function(response){
+                    if(response.success){
+                        $('#productReviewId').text(response.data.ProductReviewId)
+                        $('#memberName').text(response.data.Member.Name)
+                        $('#productName').text(response.data.Product.ProductName)
+                        $('#productRating').text(response.data.ProductRating)
+                        $('#reviewContent').text(response.data.ReviewContent)
+                        $('#reviewTime').text(response.data.ReviewTime)
+                        $('#hideReview').prop('checked', response.data.HideReview)
+                    }
+                }
+            })
+        });
+        $('#submitButton-edior').click(function () {
+            const hideReview = $('#hideReview').is(':checked');
+            const editorID = parseInt($('#productReviewId').text(), 10);
+            const reviewTime = $('#reviewTime').text();
+            const rating = parseInt($('#productRating').text(), 10);
+            const content = $('#reviewContent').text();
+            console.log(editorID)
 
-        // new DataTable('#PReview-table', {
-        //     responsive: true,
-        //     "searching": false, 
-        // });
+            const dataToSend = {
+                ProductReviewId: editorID,
+                HideReview: hideReview,
+                ReviewTime: reviewTime,
+                ProductRating: rating,
+                ReviewContent: content
+            };
+
+            $.ajax({
+                url: "@Url.Action("EditorReviews","ProductReview" , new { area="AdminCMS" })",
+                type: "POST",
+                data: JSON.stringify(dataToSend),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    if (response.success) {
+                        alert("Content saved successfully!");
+                    } else {
+                        alert("Error: " + response.message);
+                    }
+                }
+            });
+        });
+
+
+
+
+
 
         //圖片縮放設定  當頁面載入完成後執行
         document.addEventListener("DOMContentLoaded", function () {
