退換貨更新

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
@@ -492,7 +492,7 @@
                                 PTContainer.html(tableHTML);
 
                                 // 將總金額填入指定的元素中
-                                $("#totalPrice").text(`總金額：NT＄${totalPrice.toLocaleString()} (未含運費)`);
+                                $("#order_totalPrice").text(`總金額：NT＄${totalPrice.toLocaleString()} (未含運費)`);
                             } else {
                                 PTContainer.text("沒有可顯示的產品明細");
                             }
