--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -125,7 +125,6 @@
                 <table id="Banner-table" class="table table-striped nowrap" style="width:100%">
                             <thead>
                                 <tr>
-                                    <!-- <th>序號</th> -->
                                     <th>ID</th>
                                     <th>名稱</th>
                                     <th>類型</th>
@@ -134,111 +133,51 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <!-- <td>1</td> -->
-                                    <td>1</td>
-                                    <td>Banner1</td>
-                                    <td>主頁</td>
-                                    <td class="test">
-                                <img src="~/images/home-slide-2.jpg"
-                                             width="200" height="100" class="thumbnail-image">
-                                        <!-- 原始圖片的視窗 -->
-                                        <div class="image-popup">
-                                    <img src="~/images/home-slide-2.jpg"
-                                                 alt="Original Image">
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <a href="#">
-                                            <button class="btn" data-bs-toggle="modal"
-                                                    href="#exampleModalToggle" role="button">
-                                                <i class="fas fa-edit"></i>
-                                            </button>
-                                        </a> | <button class="btn"
-                                                       onclick="userDelete()">
-                                            <a href="#" id="b5">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>
-                                        </button>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <!-- <td>2</td> -->
-                                    <td>2</td>
-                                    <td>Banner2</td>
-                                    <td>促銷</td>
-                                    <td class="test">
-                                <img src="~/images/home-slide-1.jpg"
-                                             width="200" height="100" class="thumbnail-image">
-                                        <!-- 原始圖片的視窗 -->
-                                        <div class="image-popup">
-                                    <img src="~/images/home-slide-1.jpg"
-                                                 alt="Original Image">
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <a href="#">
-                                            <button class="btn" data-bs-toggle="modal"
-                                                    href="#exampleModalToggle" role="button">
-                                                <i class="fas fa-edit"></i>
-                                            </button>
-                                        </a> | <button class="btn"
-                                                       onclick="userDelete()">
-                                            <a href="#" id="b5">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>
-                                        </button>
-                                    </td>
-                                </tr>
-
-
-
-                                <!--編輯彈出視窗-->
-                                <div class="modal fade" id="exampleModalToggle" aria-hidden="true"
-                                     aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-                                    <div class="modal-dialog modal-dialog-centered">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalToggleLabel">編輯 Edit</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <!--內容表單-->
-                                                <div class="row">
-                                                    <div class="col-md-6">
-                                                        <label>ID</label>
-                                                        <input type="text" class="form-control" readonly disabled>
-                                                    </div>
-                                                    <div class="col-md-6">
-                                                        <label>名稱</label>
-                                                        <input type="text" class="form-control">
-                                                    </div>
-                                                    <div class="col-md-6">
-                                                        <label>類型</label>
-                                                        <select class="form-control">
-                                                            <option value="BannerCatgory1">主頁</option>
-                                                            <option value="BannerCatgory2">促銷</option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="col-md-12">
-                                                        <label>圖片</label>
-                                                        <input type="file" class="form-control">
-                                                    </div>
-
-                                                    <button type="submit" class="mt-3 btn btn-primary btn-block"
-                                                            style="width: 100%;">
-                                                        儲存
-                                                    </button>
-                                                </div>
-                                                <!--內容表單-->
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--編輯彈出視窗-->
                             </tbody>
+                    <!--編輯彈出視窗-->
+                    <div class="modal fade" id="exampleModalToggle" aria-hidden="true"
+                         aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalToggleLabel">編輯 Edit</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <!--內容表單-->
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <label>ID</label>
+                                            <input type="text" class="form-control" readonly disabled>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <label>名稱</label>
+                                            <input type="text" class="form-control">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <label>類型</label>
+                                            <select class="form-control">
+                                                <option value="BannerCatgory1">主頁</option>
+                                                <option value="BannerCatgory2">促銷</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-md-12">
+                                            <label>圖片</label>
+                                            <input type="file" class="form-control">
+                                        </div>
+
+                                        <button type="submit" class="mt-3 btn btn-primary btn-block"
+                                                style="width: 100%;">
+                                            儲存
+                                        </button>
+                                    </div>
+                                    <!--內容表單-->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--編輯彈出視窗-->
                         </table>
                         <!--表格-->
                     </div>
@@ -253,6 +192,51 @@
 @section Scripts{
 
     <script>
+        //確認JSon資料============================
+        $(document).ready(function () {
+            $.ajax({
+                url: '@Url.Action("LoadDataTable", "Banner")',
+                type: 'GET',
+                success: function (data) {
+                    console.log(data);
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        });
+
+        //載入DataTable=================================
+
+        // $('#Banner-table').DataTable({
+        //     "ajax": '@Url.Action("LoadDataTable", "Banner")',
+        //     "columns": [
+        //         { data: 'productId' },
+        //         { data: 'productName' },
+        //         { data: 'productCategory' },
+        //         { data: 'productDescription' },
+        //         { data: 'productPrice' },
+        //         { data: 'productImage' },
+        //         { data: 'purchasedQuantity' },
+        //         { data: 'remainingQuantity' },
+        //         { data: 'lotteryProbability' },
+        //         {
+        //             data: null,
+        //             render: function (data, type, row, meta) {
+        //                 var editButton = '<button class="btn btnEdit" data-bs-toggle="modal" href="#EditModalToggle" role="button" data-productId="' + row.productId + '"><i class="fas fa-edit"></i></button>';
+        //                 var deleteButton = '<button class="btnDelete" onclick="userDelete(' + row.productId + ')"><a href="#" id="b5"><i class="fas fa-trash-alt"></i></a></button>';
+        //                 return editButton + ' | ' + deleteButton;
+        //             }
+        //         },
+        //     ],
+        //     "paging": true,
+        //     responsive: true,
+        //     "searching": false,
+        // });
+
+
+
+
 
         //篩選類別
         $(document).ready(function () {
