--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -182,41 +182,41 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <label>ID</label>
-                                            <input type="text" class="form-control" readonly disabled id="edit_id">
+                                            <input type="text" class="form-control" readonly disabled id="edit_id" name="ProductId">
                                         </div>
                                         <div class="col-md-6">
                                             <label>名稱</label>
-                                            <input type="text" class="form-control" id="edit_name">
+                                            <input type="text" class="form-control" id="edit_name" name="ProductName">
                                         </div>
                                         <div class="col-md-6">
                                             <label>類別</label>
-                                            <select class="form-control" id="edit_category">
+                                            <select class="form-control" id="edit_category" name="ProductCategory">
                                             </select>
                                         </div>
                                         <div class="col-md-6">
                                             <label>描述</label>
-                                            <input type="text" class="form-control" id="edit_description">
+                                            <input type="text" class="form-control" id="edit_description" name="ProductDescription">
                                         </div>
                                         <div class="col-md-6">
                                             <label>價格</label>
-                                            <input type="text" class="form-control" id="edit_price">
+                                            <input type="text" class="form-control" id="edit_price" name="ProductPrice ">
                                         </div>
 
                                         <div class="col-md-6">
                                             <label>已被購買數量</label>
-                                            <input type="text" class="form-control" id="edit_purchasedquantity">
+                                            <input type="text" class="form-control" id="edit_purchasedquantity" name="PurchasedQuantity">
                                         </div>
                                         <div class="col-md-6">
                                             <label>剩餘數量</label>
-                                            <input type="text" class="form-control" id="edit_remainingquantity">
+                                            <input type="text" class="form-control" id="edit_remainingquantity" name="RemainingQuantity">
                                         </div>
                                         <div class="col-md-6">
                                             <label>抽獎機率</label>
-                                            <input type="text" class="form-control" id="edit_rate">
+                                            <input type="text" class="form-control" id="edit_rate" name="LotteryProbability">
                                         </div>
                                         <div class="col-md-12">
                                             <label>圖片</label>
-                                            <input type="file" class="form-control" id="edit_image">
+                                            <input type="file" class="form-control" id="edit_image" name="ProductImage">
                                         </div>
 
                                         <button type="submit" class="mt-3 btn btn-primary btn-block  EditProduct_Save" id="EditProduct_Save"
@@ -271,7 +271,7 @@
                 {
                     data: null,
                     render: function (data, type, row, meta) {
-                        var editButton = '<button class="btnEdit" data-bs-toggle="modal" href="#EditModalToggle" role="button" data-productId="' + row.productId + '"><i class="fas fa-edit"></i></button>';
+                        var editButton = '<button class="btn btnEdit" data-bs-toggle="modal" href="#EditModalToggle" role="button" data-productId="' + row.productId + '"><i class="fas fa-edit"></i></button>';
                         var deleteButton = '<button class="btnDelete" onclick="userDelete(' + row.productId + ')"><a href="#" id="b5"><i class="fas fa-trash-alt"></i></a></button>';
                         return editButton + ' | ' + deleteButton;
                     }
@@ -299,7 +299,7 @@
                     $('#edit_purchasedquantity').val(data.data.purchasedQuantity);
                     $('#edit_remainingquantity').val(data.data.remainingQuantity);
                     $('#edit_rate').val(data.data.lotteryProbability);
-                    $('#edit_image').val(data.data.productImage);
+                    $('#edit_image').attr('src', data.data.productImage);
                 }
             });
         });
